Change wsdl location