@@ -6,6 +6,7 @@ import autorizacion.ws.sri.gob.ec.RespuestaComprobante;
 
 import javax.xml.namespace.QName;
 import javax.xml.ws.BindingProvider;
+import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URL;
 
@@ -14,8 +15,11 @@ public class AutorizacionComprobanteProxy {
     private AutorizacionComprobantesOfflineService service;
     private AutorizacionComprobantesOffline port;
 
-    public AutorizacionComprobanteProxy(String wsdlLocation) throws MalformedURLException {
-        service = new AutorizacionComprobantesOfflineService(new URL(wsdlLocation),
+    public AutorizacionComprobanteProxy(String wsdlFileLocation) throws MalformedURLException {
+        File wsdlFile = new File(wsdlFileLocation);
+        URL url = wsdlFile.toURI().toURL();
+
+        service = new AutorizacionComprobantesOfflineService(url,
                 new QName("http://ec.gob.sri.ws.autorizacion", "AutorizacionComprobantesOfflineService"));
         port = service.getAutorizacionComprobantesOfflinePort();
         ((BindingProvider) port).getRequestContext().put("com.sun.xml.internal.ws.connect.timeout", 10000);
